<resources>
    <string name="app_name">payzan</string>
    <string name="facebook_app_id">267297907115951</string>
    <string name="fb_login_protocol_scheme">fb267297907115951</string>
    <string name="com_facebook_loginview_log_in_button">Connect</string>
    <string name="com_facebook_loginview_log_out_button">Your Logout</string>
    <string name="terms_and_conditions">By loging in,you accept our Term\'s  &amp; Conditions and Privacy Policy</string>

    <string name="mobile_recharge_sname">"Mobile recharge &amp; Pay bill"</string>
    <string name="dth_sname">"DTH"</string>
    <string name="water_sname">"Water"</string>
    <string name="landline_sname">"Landline"</string>
    <string name="cabletv_sname">"Cable TV"</string>
    <string name="datacard_sname">"Data Card"</string>
    <string name="electricity_sname">"Electricity"</string>
    <string name="broadband_sname">"Broadband"</string>
    <string name="wallet_sname">" My Wallet"</string>
    <string name="login_sname">"Login"</string>
    <string name="add_money_to_wallet">Add money to wallet</string>
    <string name="enter_amount_to_be_added_in_the_wallet">Enter amount to be added in the wallet</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="add_money">Add money</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="select_operator">Select operator</string>
    <string name="amount">Amount</string>
    <string name="signin_with_facebook">Signin with Facebook</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile </string>
    <string name="login">Login</string>
    <string name="don_t_have_account_signup">Don\'t have account..?Signup</string>
    <string name="signin_with_google">Signin with Google</string>
    <string name="signin_with_google_test">Signin with Google</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_operator">Current Operator</string>
    <string name="talktime_topup">Talktime Topup</string>
    <string name="special_recharge">Special Recharge</string>
    <string name="proceed_to_recharge">Proceed to Recharge</string>
    <string name="select_district">Select District</string>
    <string name="service_no">Service No</string>
    <string name="consumer_no">Consumer No</string>
    <string name="proceed_to_pay_bill">Proceed to Pay Bill</string>
    <string name="landline">Landline</string>
    <string name="operator">Operator</string>
    <string name="number_with_std_code">Number with STD Code</string>
    <string name="select_circle">Select Circle</string>
    <string name="browse_plans">browse Plans</string>
    <string name="recharge">Recharge</string>
    <string name="profile">Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="mobile_number_signup">+94 Mobile Number</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">- or -</string>
    <string name="order_no">Order No 1234567</string>
    <string name="date_order">15 sep 2017 08:15 PM</string>
    <string name="comments">Comment(optional)</string>
    <string name="send_money">Send Money</string>
    <string name="select_board">Select Board</string>
    <string name="already_have_account">Already have account? Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_card_number">Data Card Number</string>
    <string name="confirm_password">confirm password</string>
    <string name="Update_Password">Update Password</string>
    
    <string name="search_transactionid">Search Transaction id,Mobile No...</string>

</resources>
