<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_new"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/layout_marin_right"
        android:layout_marginRight="@dimen/layout_marin_right"
        android:layout_marginLeft="@dimen/layout_marin_right">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/main_layout_head_bottom_margin">
        <ImageView
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            app:srcCompat="@drawable/ic_landline"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/landline"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_header_size"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-smallcaps"
            />
    </LinearLayout>

        <EditText
            android:id="@+id/operator"
            android:hint="@string/operator"
            style="@style/EditTextStyle"
            android:layout_marginBottom="@dimen/main_layout_head_bottom_margin"/>

        <FrameLayout
            android:id="@+id/first1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

        <EditText
            android:id="@+id/mobileEdt"
            style="@style/EditTextStyle"
            android:hint="@string/number_with_std_code"
            android:inputType="numberDecimal"
          />


        <ImageView
            android:id="@+id/mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/tenDp"
            android:src="@drawable/prepaid_contacts_icon" />
        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/circleEdt"
            android:hint="@string/select_circle"
            style="@style/EditTextStyle"
           />

        <FrameLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/main_layout_head_bottom_margin"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                />

            <TextView
                android:id="@+id/browsePlans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/tenDp"
                android:text="@string/browse_plans"
                android:textColor="@color/accent"
                android:textSize="@dimen/tenSP"
                android:fontFamily="sans-serif-condensed"
                />
        </FrameLayout>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/submit"
            android:text="@string/recharge"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
</LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>