<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/lyt_margin_top">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/lyt_margin_left"
                android:layout_marginRight="@dimen/lyt_margin_right">

                <calibrage.payzan.utils.NCBTextInputLayout

                    android:id="@+id/mobileNumberTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--style="@style/EditTextStyle"-->
                    <calibrage.payzan.controls.CommonEditText
                        android:id="@+id/mobileEdt"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edt_height"
                        android:background="@drawable/roundededittext"
                        android:drawableRight="@drawable/prepaid_contacts_icon"
                        android:gravity="center_vertical"
                        android:hint="@string/mobile_number"
                        android:inputType="numberDecimal"
                        android:paddingLeft="15dp" />
                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.utils.NCBTextInputLayout
                    android:id="@+id/amountTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <calibrage.payzan.controls.CommonEditText
                        android:id="@+id/amount"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/amount"
                        android:inputType="numberDecimal" />

                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.utils.NCBTextInputLayout
                    android:id="@+id/commentTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <calibrage.payzan.controls.CommonEditText
                        android:id="@+id/commentEdt"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/comments"
                        android:inputType="numberDecimal"
                        android:layout_marginBottom="@dimen/main_layout_head_bottom_margin"/>

                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.controls.CommonButton
                    android:id="@+id/submit"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/btn_margin_top"
                    android:background="@drawable/roundbutton"
                    android:text="@string/send_money"
                    />
            </LinearLayout>


        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>