<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_new"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lyt_margin_left"
                android:layout_marginRight="@dimen/lyt_margin_right"
                android:layout_marginTop="@dimen/lyt_margin_top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/lyt_margin_bottom"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/img_height"
                        android:layout_height="@dimen/img_width"
                        app:srcCompat="@drawable/ic_internet" />

                    <calibrage.payzan.controls.CommonTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:text="Broadband"
                        android:layout_marginLeft="@dimen/txt_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_header" />
                </LinearLayout>

                <calibrage.payzan.controls.CommonEditText
                    android:id="@+id/stateEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/edt_bottom_margin"
                    android:hint="State"
                    android:textSize="@dimen/edt_FontSize"
                    android:visibility="gone" />

                <calibrage.payzan.utils.NCBTextInputLayout
                    android:id="@+id/operatorTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/operatorSpn"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/select_operator" />
                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.utils.NCBTextInputLayout
                    android:id="@+id/serviceNoTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <calibrage.payzan.controls.CommonEditText
                        android:id="@+id/ServiceNEdt"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/service_no" />
                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.utils.NCBTextInputLayout
                    android:id="@+id/amountTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <calibrage.payzan.controls.CommonEditText
                        android:id="@+id/amountEdt"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="@dimen/edt_bottom_margin"
                        android:hint="@string/amount"
                        android:inputType="number" />
                </calibrage.payzan.utils.NCBTextInputLayout>

                <calibrage.payzan.controls.CommonButton
                    android:id="@+id/submit"
                    style="@style/ButtonStyle"
                    android:text="@string/proceed_to_pay_bill" />

            </LinearLayout>


        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>