<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_new"
    android:clickable="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/lyt_margin_top"
            android:layout_marginRight="@dimen/lyt_margin_right"
            android:layout_marginLeft="@dimen/lyt_margin_left">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="@dimen/lyt_margin_bottom">
                <ImageView
                    android:layout_width="@dimen/img_height"
                    android:layout_height="@dimen/img_height"
                    app:srcCompat="@drawable/ic_dth"
                    android:layout_toLeftOf="@+id/header"
                    android:layout_marginRight="@dimen/lyt_margin_right"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="D T H"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_header"
                    android:layout_centerInParent="true"
                   android:id="@+id/header"
                    />
            </LinearLayout>

            <calibrage.payzan.controls.CommonEditText
                android:layout_width="match_parent"
                android:id="@+id/operator"
                android:hint="@string/subscriber_id"
                style="@style/EditTextStyle"
                android:textSize="@dimen/edittext_text_size"
                android:layout_marginBottom="@dimen/lyt_margin_bottom" />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/customerId"
                android:hint="@string/select_operator"
                style="@style/EditTextStyle"
                android:textSize="@dimen/edittext_text_size"
                android:layout_marginBottom="@dimen/main_layout_head_bottom_margin"/>


            <FrameLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/amount"
                    android:hint="@string/amount"
                    style="@style/EditTextStyle"
                    android:textSize="@dimen/edittext_text_size"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/main_layout_head_bottom_margin"/>
                <TextView
                    android:id="@+id/browsePlans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="browse Plans"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_size_inner_edit_text"
                    android:fontFamily="sans-serif-condensed"
                     />
            </FrameLayout>


            <Button
              style="@style/ButtonStyle"
                android:id="@+id/submit"
                android:text="Proceed to Recharge"
                android:layout_marginTop="@dimen/main_layout_head_bottom_margin"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>